--- a/index.html
+++ b/index.html
@@ -407,7 +407,37 @@
                     <use href="./images/icons.svg#close" width="18px" height="18px"></use>
                 </svg>
             </button>
-        </div>
+        
+            <form class="form">
+                <h2 class="form-tittle">Залиште свої дані, ми вам передзвонимо</h2>
+                <div class="form-field">
+                <label class="form-label" for="name">Ім'я</label>
+                <input class="form-input" type="text" name="name" id="name" autofocus />
+                </div>
+
+                <div class="form-field">
+                <label class="form-label" for="tel">Телефон</label>
+                <input class="form-input" type="tel" name="tel" id="tel"/>
+                </div>
+
+                <div class="form-field">
+                <label class="form-label" for="mail">Пошта</label>
+                <input class="form-input" type="email" name="mail" id="mail"/>
+                </div>
+
+                <div>
+                <label class="form-label" for="comment">Коментар</label>
+                <textarea class="comments"  name="comment" id="comment" placeholder="Введіть текст"></textarea>
+                </div>
+
+                <div class="form-checkbox">
+                <input  type="checkbox" name="argreed" value="argreed" id="argreed" checked>
+                <label  for="argreed">Погоджуюся з розсилкою та приймаю Умови договору</label>
+                </div> 
+                
+                <button class="button-form" type="submit">Відправити</button>
+            </form>
+            </div>
        </div>
 
     <script src="./js/modal.js"></script>
