Додає розмітку і стилі у футері

--- a/portfolio.html
+++ b/portfolio.html
@@ -252,6 +252,16 @@
                 </li>
             </ul>
         </div>
+        <form class="subscribe">
+            <p class="subscribe-text">Підпишіться на розсилку</p>
+            <input class="subscribe-input" type="email" name="email" placeholder="E-mail">
+            <button class="subscribe-button" type="submit">
+                Підписатися
+                <svg class="subscribe-icon">
+                    <use href="./images/icons.svg#plane" width="24px" height="24px"></use>
+                </svg>
+            </button>
+        </form>
     </div>
 </footer>
 </body>
