--- a/index.html
+++ b/index.html
@@ -397,18 +397,21 @@
                     </li>
                 </ul>
             </div>
-            <form class="subscribe">
+            <div class="subscribe">
                 <p class="subscribe-text">Підпишіться на розсилку</p>
-                <input class="subscribe-input" type="email" name="email" placeholder="E-mail">
-                <button class="subscribe-button" type="submit">
-                    Підписатися
+                <form class="subscribe-form">  
+                    <input class="subscribe-input" type="email" name="email" placeholder="E-mail">
+                    <button class="subscribe-button" type="submit">
+                     Підписатися
                     <svg class="subscribe-icon">
                         <use href="./images/icons.svg#plane" width="24px" height="24px" ></use>
                     </svg>
-                </button>
-            </form>
+                    </button>
+                </form>
+            </div>
         </div>
     </footer>
+
        <div class="backdrop  is-hidden" data-modal>
         <div class="modal">
             <button type="button" class="button-modal" data-modal-close>
@@ -416,8 +419,8 @@
                     <use href="./images/icons.svg#close" width="18px" height="18px"></use>
                 </svg>
             </button>
+            <p class="form-tittle">Залиште свої дані, ми вам передзвонимо</p>
             <form class="form">
-                <h2 class="form-tittle">Залиште свої дані, ми вам передзвонимо</h2>
                 <div class="form-field">
                     <label class="form-label" for="name">Ім'я</label>
                     <input class="form-input" type="text" name="name" id="name" autofocus />
@@ -445,11 +448,12 @@
                 </div>
 
                 <div class="form-checkbox">
+                    <label class="checkbox-lable" for="argreed">
                     <input class="checkbox" type="checkbox" name="argreed" value="argreed" id="argreed" >
                     <svg class="checkbox-icon">
                         <use href="./images/icons.svg#check" ></use>
                     </svg>
-                    <label  for="argreed">Погоджуюся з розсилкою та приймаю 
+                     Погоджуюся з розсилкою та приймаю 
                         <a href="">Умови договору</a>
                     </label>
                 </div> 
